--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,91 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #fff; /* White background */
+    color: #000; /* Black text color */
+
+}
+
+.sticky-header {
+    background: #025259; /* Gradient background using a blue accent color */
+    color: #fff; /* White text color */
+    padding: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Box shadow for a subtle lift */
+    transition: background 0.3s; /* Smooth transition for background color change */
+}
+
+.sticky-header:hover {
+    background: #007172; /* Darker gradient on hover */
+}
+
+.sticky-header h1 {
+    margin: 0;
+    font-size: 24px;
+    color: #ffcc00; /* Yellow color for the website name */
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #ecf0f1; /* Light gray color for menu links */
+    font-weight: bold;
+    transition: color 0.3s; /* Smooth transition for text color change */
+}
+
+nav a:hover {
+    color: #3498db; /* Blue color for menu links on hover */
+}
+
+.content {
+    padding: 20px;
+
+  
+}
+.paragraph
+{
+    font-family: 'Arial', sans-serif; /* Choose a suitable font */
+    font-size: 16px; /* Set the font size */
+    line-height: 1.5; /* Adjust the line height for better readability */
+    color: #333; /* Set the text color */
+    margin-bottom: 20px; /* Add some space below the paragraph */
+    text-align: justify;
+    line-height: 2;
+}
+
+/* Color Theme Swatches in Hex */
+.orange--teal-1-hex { color: #025259; }
+.orange--teal-2-hex { color: #007172; }
+.orange--teal-3-hex { color: #F29325; }
+.orange--teal-4-hex { color: #D94F04; }
+.orange--teal-5-hex { color: #F4E2DE; }
+
+/* Color Theme Swatches in RGBA */
+.orange--teal-1-rgba { color: rgba(2, 82, 89, 1); }
+.orange--teal-2-rgba { color: rgba(0, 112, 114, 1); }
+.orange--teal-3-rgba { color: rgba(242, 147, 36, 1); }
+.orange--teal-4-rgba { color: rgba(216, 79, 4, 1); }
+.orange--teal-5-rgba { color: rgba(244, 226, 221, 1); }
+
+/* Color Theme Swatches in HSLA */
+.orange--teal-1-hsla { color: hsla(184, 95, 17, 1); }
+.orange--teal-2-hsla { color: hsla(180, 100, 22, 1); }
+.orange--teal-3-hsla { color: hsla(32, 88, 54, 1); }
+.orange--teal-4-hsla { color: hsla(21, 96, 43, 1); }
+.orange--teal-5-hsla { color: hsla(10, 50, 91, 1); }
+
 
